--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\202309282219276_AddMembershipType.Designer.cs">
       <DependentUpon>202309282219276_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202309282222281_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\202309282222281_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>202309282222281_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -285,6 +289,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202309282219276_AddMembershipType.resx">
       <DependentUpon>202309282219276_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309282222281_PopulateMembershipTypes.resx">
+      <DependentUpon>202309282222281_PopulateMembershipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
