Apply Annotations to Customer Name

--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Migrations\202309282222281_PopulateMembershipTypes.Designer.cs">
       <DependentUpon>202309282222281_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202309282234179_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\202309282234179_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>202309282234179_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -292,6 +296,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202309282222281_PopulateMembershipTypes.resx">
       <DependentUpon>202309282222281_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309282234179_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>202309282234179_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
