--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -203,6 +203,10 @@
     <Compile Include="Migrations\202309282315540_PopulateMembershipTypeNames.Designer.cs">
       <DependentUpon>202309282315540_PopulateMembershipTypeNames.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202309282337461_AddBirthdatePropertyToCustomer.cs" />
+    <Compile Include="Migrations\202309282337461_AddBirthdatePropertyToCustomer.Designer.cs">
+      <DependentUpon>202309282337461_AddBirthdatePropertyToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -313,6 +317,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202309282315540_PopulateMembershipTypeNames.resx">
       <DependentUpon>202309282315540_PopulateMembershipTypeNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309282337461_AddBirthdatePropertyToCustomer.resx">
+      <DependentUpon>202309282337461_AddBirthdatePropertyToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
