--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -207,9 +207,26 @@
     <Compile Include="Migrations\202309282337461_AddBirthdatePropertyToCustomer.Designer.cs">
       <DependentUpon>202309282337461_AddBirthdatePropertyToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202309290002317_AddNewPropertiesForMovieClass.cs" />
+    <Compile Include="Migrations\202309290002317_AddNewPropertiesForMovieClass.Designer.cs">
+      <DependentUpon>202309290002317_AddNewPropertiesForMovieClass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202309290005110_AddingMovieTableWithProperties.cs" />
+    <Compile Include="Migrations\202309290005110_AddingMovieTableWithProperties.Designer.cs">
+      <DependentUpon>202309290005110_AddingMovieTableWithProperties.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202309290006084_PopulatingGenres.cs" />
+    <Compile Include="Migrations\202309290006084_PopulatingGenres.Designer.cs">
+      <DependentUpon>202309290006084_PopulatingGenres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202309290021322_PopulateMovies.cs" />
+    <Compile Include="Migrations\202309290021322_PopulateMovies.Designer.cs">
+      <DependentUpon>202309290021322_PopulateMovies.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -279,6 +296,8 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -320,6 +339,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202309282337461_AddBirthdatePropertyToCustomer.resx">
       <DependentUpon>202309282337461_AddBirthdatePropertyToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309290002317_AddNewPropertiesForMovieClass.resx">
+      <DependentUpon>202309290002317_AddNewPropertiesForMovieClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309290005110_AddingMovieTableWithProperties.resx">
+      <DependentUpon>202309290005110_AddingMovieTableWithProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309290006084_PopulatingGenres.resx">
+      <DependentUpon>202309290006084_PopulatingGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309290021322_PopulateMovies.resx">
+      <DependentUpon>202309290021322_PopulateMovies.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
