--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -223,6 +223,30 @@
     <Compile Include="Migrations\202309290021322_PopulateMovies.Designer.cs">
       <DependentUpon>202309290021322_PopulateMovies.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202309291216412_AddGenreTableToContext.cs" />
+    <Compile Include="Migrations\202309291216412_AddGenreTableToContext.Designer.cs">
+      <DependentUpon>202309291216412_AddGenreTableToContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202309291239489_MovieDateAddedPropertyChanged.cs" />
+    <Compile Include="Migrations\202309291239489_MovieDateAddedPropertyChanged.Designer.cs">
+      <DependentUpon>202309291239489_MovieDateAddedPropertyChanged.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202309291301418_AddGenreIdPropertyToMovieClass.cs" />
+    <Compile Include="Migrations\202309291301418_AddGenreIdPropertyToMovieClass.Designer.cs">
+      <DependentUpon>202309291301418_AddGenreIdPropertyToMovieClass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202309291306145_PopulateGenres.cs" />
+    <Compile Include="Migrations\202309291306145_PopulateGenres.Designer.cs">
+      <DependentUpon>202309291306145_PopulateGenres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202309291307035_UpdateMembershipTypes.cs" />
+    <Compile Include="Migrations\202309291307035_UpdateMembershipTypes.Designer.cs">
+      <DependentUpon>202309291307035_UpdateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202309291334183_UpdateMovieProperties.cs" />
+    <Compile Include="Migrations\202309291334183_UpdateMovieProperties.Designer.cs">
+      <DependentUpon>202309291334183_UpdateMovieProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -234,6 +258,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\NewCustomerViewModel.cs" />
+    <Compile Include="ViewModels\NewMovieViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -300,6 +325,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -353,6 +379,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202309290021322_PopulateMovies.resx">
       <DependentUpon>202309290021322_PopulateMovies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309291216412_AddGenreTableToContext.resx">
+      <DependentUpon>202309291216412_AddGenreTableToContext.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309291239489_MovieDateAddedPropertyChanged.resx">
+      <DependentUpon>202309291239489_MovieDateAddedPropertyChanged.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309291301418_AddGenreIdPropertyToMovieClass.resx">
+      <DependentUpon>202309291301418_AddGenreIdPropertyToMovieClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309291306145_PopulateGenres.resx">
+      <DependentUpon>202309291306145_PopulateGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309291307035_UpdateMembershipTypes.resx">
+      <DependentUpon>202309291307035_UpdateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202309291334183_UpdateMovieProperties.resx">
+      <DependentUpon>202309291334183_UpdateMovieProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
