--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -267,6 +267,10 @@
     <Compile Include="Migrations\202309291334183_UpdateMovieProperties.Designer.cs">
       <DependentUpon>202309291334183_UpdateMovieProperties.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202310162341559_SeedUsers.cs" />
+    <Compile Include="Migrations\202310162341559_SeedUsers.Designer.cs">
+      <DependentUpon>202310162341559_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -593,6 +597,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202309291334183_UpdateMovieProperties.resx">
       <DependentUpon>202309291334183_UpdateMovieProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202310162341559_SeedUsers.resx">
+      <DependentUpon>202310162341559_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
