--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -271,6 +271,10 @@
     <Compile Include="Migrations\202310162341559_SeedUsers.Designer.cs">
       <DependentUpon>202310162341559_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202310182150281_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\202310182150281_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>202310182150281_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -280,6 +284,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\NewCustomerViewModel.cs" />
@@ -601,6 +606,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202310162341559_SeedUsers.resx">
       <DependentUpon>202310162341559_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202310182150281_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>202310182150281_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
