Custom Error Pages Implementation

--- a/Vidly/Vidly/Web.config
+++ b/Vidly/Vidly/Web.config
@@ -11,14 +11,21 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Vidly-20230928012612.mdf;Initial Catalog=aspnet-Vidly-20230928012612;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  
+	<appSettings configSource="AppSettings.config"></appSettings>
   <system.web>
+	  <customErrors mode="On">
+		  <error statusCode="404" redirect="~/404.html"/>
+	  </customErrors>
 	  <sessionState mode="Off"></sessionState>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
+	  <httpErrors errorMode="Custom">
+		  <remove statusCode="404"/>
+		  <error statusCode="404" path="404.html" responseMode="File"/>
+	  </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
